syntax = "proto3";
import "google/protobuf/empty.proto";
package huddly;
option csharp_namespace = "Huddly.Camera.Service.gRPC";

service HuddlyCameraService

{
  rpc SetDefaultCamera(CameraInfo) returns (google.protobuf.Empty) {}
  rpc GetDefaultCamera(google.protobuf.Empty) returns (CameraInfo) {}
  rpc SetActiveCamera(CameraInfo) returns (google.protobuf.Empty) {}
  rpc GetActiveCamera(google.protobuf.Empty) returns (CameraInfo) {}
  rpc SetUserPTZ(UserPtz) returns (google.protobuf.Empty) {}
  rpc GetUserPTZ(google.protobuf.Empty)returns (UserPtz) {}
}

message UserPtz
{
  bool enabled = 1;
}

message CameraInfo
{
  string mac = 1;
  string ip = 2;
  string name = 3;
}
